feat: Get available results selection
